# gpl

./: CHANGELOG.md  CONTRIBUTING.md  README.md  VERSIONING.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  security.yml
gpl/: __init__.py  core.py
src/gpl/: __init__.py  __main__.py  cli.py  engine.py  models.py  reporting.py  schema.py  transport.py
src/gpl/checks/: __init__.py  builtin.py
tests/: test_enterprise_scan.py  test_smoke.py
